--- a/day-3/day-3/day-3.vcxproj
+++ b/day-3/day-3/day-3.vcxproj
@@ -143,6 +143,8 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="data.txt" />
+    <Text Include="data2.txt" />
+    <Text Include="data3.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
