--- a/day-3/day-3/day-3.vcxproj.filters
+++ b/day-3/day-3/day-3.vcxproj.filters
@@ -23,5 +23,11 @@
     <Text Include="data.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="data2.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="data3.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
