--- a/day-4/day-4/day-4.vcxproj
+++ b/day-4/day-4/day-4.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{b8fb3c8a-523f-46c5-b8a0-76e826726db6}</ProjectGuid>
-    <RootNamespace>day3</RootNamespace>
+    <ProjectGuid>{73519619-1acf-4ac9-aec7-8f0ffc0382f4}</ProjectGuid>
+    <RootNamespace>day4</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -140,12 +140,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="validation.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="data.txt" />
-    <Text Include="data2.txt" />
-    <Text Include="data3.txt" />
-    <Text Include="data4.txt" />
+    <Text Include="testing.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="validation.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
